--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -78,7 +78,7 @@
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://join.join.com/jobs/251240-business-intelligence-analyst-f-m-d'>Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://join.join.com/jobs/251240-business-intelligence-analyst-f-m-d'>Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 12, 2019 ... JOIN Solutions has a job opening for Business Intelligence Analyst (f/m/d) in 
 Berlin (published: 18.09.2018). Apply now or check the other available jobs.</p>
@@ -131,7 +131,7 @@ Cover) at Paymentsense.</p>
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Business Intelligence Analyst at Verve.</p>
 <hr/>
-<h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fooda.applytojob.com/apply/AeXbGSCmMn/Business-Intelligence-Analyst'>Business Intelligence Analyst - Fooda - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -193,7 +193,7 @@ Technologies Inc.</p>
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/santander-consumer-usa/job/oSX78fwO'>Santander Consumer USA Careers - Associate, Business Intelligence &amp; Reporting</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -203,12 +203,12 @@ Technologies Inc.</p>
 scalable data pipelines to support various data integrations; Propose, build, and
 ?...</p>
 <hr/>
-<h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C?viewed=true'>Business Intelligence Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://schibsted-classified-hungary-kft.workable.com/j/CFCA0EE35C?viewed=true'>Business Intelligence Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 napja ... Apply online for the job of Business Intelligence Analyst at Adevinta Classified 
 Media Hungary Kft.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
+<h5><a href='https://sivantos.recruitee.com/o/analyst-business-intelligence'>
       Analyst, Business Intelligence - Sivantos
     </a></h5> 
 <p><span class="badge badge-light">Singapore, Singapore</span></p>
@@ -250,7 +250,7 @@ developing and implementing metrics and reporting to improve our business and
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logix/jobs/1782486'>Job Application for Business Intelligence Developer at Logix Federal Credit Union</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -314,7 +314,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999692018235-business-intelligence-analyst-h-f-'>Proprioo Business intelligence analyst (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -326,7 +326,7 @@ Mavenlink?...</p>
 <p><span class="badge badge-light">Jakarta, Indonesia</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
+<h5><a href='https://jobs.jobvite.com/groupm-na/job/odczafwS'>GroupM North America Careers - Manager, Business Intelligence</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... ABOUT THE TEAM: Business Science, which encompasses Digital Analytics, is 
 one of the fastest growing fields within MediaCom and focuses on (1) providing?...</p>
@@ -391,7 +391,7 @@ reporting infrastructure and visualisation to the next level. BI touches every p
 <p><span class="badge badge-light">Redwood City California</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rappi/e8cd1a65-94e4-4ecd-a129-008e088875c3'>Rappi - Business Intelligence Intern</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -429,7 +429,7 @@ our BI team. The position is available at the earliest possible date in full-tim
 <p>6 days ago ... OkCupid is looking for a BI expert to contribute to our data-driven organization. 
 We enjoy working on a product that helps millions of people find love and get a?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1768752'>Job Application for Manager, Business Intelligence at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1768752'>Job Application for Manager, Business Intelligence at Twilio</a></h5> 
 <p><span class="badge badge-light">Dublin</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
